--- a/src/styles/album.css
+++ b/src/styles/album.css
@@ -1,7 +1,6 @@
 @import "./global.css";
 
 body {
-    font-family: var(--font-Noto);
     background-color: #000000;
 }
 
@@ -33,9 +32,9 @@ body > #wrap {
 }
 
 .album-Banner > .album-cover {
+    position: relative;
     width: 25rem;
     height: 25rem;
-    background-color: rgba(119,119,119,0.2);
 }
 
 .album-cover > img {
@@ -58,40 +57,43 @@ body > #wrap {
 }
 
 .album-title > .album-name {
+    position: relative;
     width: 100%;
     height: 6rem;
-    background-color: rgba(119,119,119,0.2);
 }
 
 .album-name > h1 {
     font-size: 1.3rem;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Bold';
     text-transform: uppercase;
 }
 
 .album-title > .release-date {
+    position: relative;
     width: 100%;
     height: 3rem;
-    background-color: rgba(119,119,119,0.2);
     margin-top: 1rem;
 }
 
 .release-date > p {
     font-size: 1rem;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Regular';
     line-height: 3rem;
 }
 
 .album-info > .total-track {
+    position: relative;
     width: 100%;
     height: 3rem;
-    background-color: rgba(119,119,119,0.2);
 }
 
 .total-track > span {
     font-size: 1rem;
     line-height: 3rem;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Regular';
 }
 
 .main-container > .album-Track {
@@ -109,7 +111,8 @@ body > #wrap {
 
 .title-wrap > h1 {
     font-size: 1.3rem;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Bold';
     text-transform: uppercase;
 }
 
@@ -152,19 +155,22 @@ body > #wrap {
     line-height: 2rem;
     font-size: 14px;
     text-transform: uppercase;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Bold';
 }
 
 .title-wrap > p {
     line-height: 2rem;
     color: rgba(255, 255, 255, 0.5);
     font-size: 13px;
+    font-family: 'SEBANG_Regular';
 }
 
 .track-item > .track-artist {
     width: 20rem;
     line-height: 4rem;
-    color: #fff;
+    color: var(--white-color);
+    font-family: 'SEBANG_Regular';
     font-size: 14px;
 }
 
@@ -179,10 +185,10 @@ body > #wrap {
 .play-track > svg {
     width: 2rem;
     height: 2rem;
-    fill: #fff;
+    fill: var(--white-color);
 }
 
-.album-Track > .skeleton-loading {
+.album-Track > .trackList-loading {
     position: relative;
     top: 0;
     left: 0;
@@ -190,7 +196,7 @@ body > #wrap {
     height: 22rem;
 }
 
-.skeleton-loading > .skeleton-item {
+.trackList-loading > .skeleton-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -202,23 +208,41 @@ body > #wrap {
 .skeleton-item > .img-area {
     width: 4rem;
     height: 4rem;
-    background-color: rgba(119, 119, 119, 0.2);
+    background-image: linear-gradient(to right, rgba(164, 164, 164, 0.1) 0%, rgba(119, 119, 119, 0.25) 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    animation: load 1s infinite;
 }
 
 .skeleton-item > .title-area {
     width: 40rem;
     height: 100%;
-    background-color: rgba(119, 119, 119, 0.2);
+    background-image: linear-gradient(to right, rgba(164, 164, 164, 0.1) 0%, rgba(119, 119, 119, 0.25) 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    animation: load 1s infinite;
 }
 
 .skeleton-item > .artist-area {
     width: 20rem;
     height: 100%;
-    background-color: rgba(119, 119, 119, 0.2);
+    background-image: linear-gradient(to right, rgba(164, 164, 164, 0.1) 0%, rgba(119, 119, 119, 0.25) 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    animation: load 1s infinite;
 }
 
 .skeleton-item > .play-area {
     width: 4rem;
     height: 100%;
-    background-color: rgba(119, 119, 119, 0.2);
+    background-image: linear-gradient(to right, rgba(164, 164, 164, 0.1) 0%, rgba(119, 119, 119, 0.25) 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    animation: load 1s infinite;
+}
+
+@keyframes load {
+    100% {
+        background-position: -100% 0;
+    }
 }
