--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Gugi&family=Noto+Sans+KR:wght@100..900&display=swap");
-
+/* 폰트 설정 */
 @font-face {
     font-family: 'SEBANG_Bold';
     src: url('@/font/sebang/SEBANG Gothic Bold.ttf');
@@ -15,11 +13,22 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family : 'Unbounded-Regular';
+    src : url('@/font/unbounded/Unbounded-VariableFont_wght.ttf');
+    font-weight : 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family : 'Unbounded-Bold';
+    src : url('@/font/unbounded/Unbounded-VariableFont_wght.ttf');
+    font-weight : 700;
+    font-style: normal;
+}
+
 /* 전역 속성 변수 */
 :root {
-    --font-Unbounded : 'Unbounded', sans-serif;
-    --font-Noto : 'SEBANG_Regular', sans-serif;
-    --header-height : 6.25rem;
     --black-color : #000;
     --white-color : #fff;
     --text-color : #5c5c5c;
@@ -36,16 +45,17 @@
     text-decoration: none;
 }
 
+/* 스크롤 바 영역 css */
 html::-webkit-scrollbar {
     width: 10px;
 }
 
 html::-webkit-scrollbar-thumb {
     width: 10px;
-    background-color: #fff;
+    background-color: var(--white-color);
 }
 
-/*header 영역*/
+/* 전역 header 영역 */
 #wrap > header {
     position: fixed;
     top: 0;
@@ -54,7 +64,7 @@ html::-webkit-scrollbar-thumb {
     height: 5rem;
     padding: 0 6.25rem;
     z-index: 100;
-    font-family: var(--font-Unbounded);
+    font-family: 'Unbounded-Bold';
     transition: all 1s ease-in-out;
 }
 
@@ -74,7 +84,7 @@ a > h1{
     line-height: 5rem;
     font-weight: 900;
     font-size: 1.5rem;
-    color: #fff;
+    color: var(--white-color);
     text-transform: uppercase;
 }
 
@@ -100,10 +110,12 @@ nav > .menu-button {
     font-weight: bold;
 }
 
+/* 전역 footer 영역 */
 #wrap > footer {
     width: 100%;
     height: 25rem;
-    font-family: var(--font-Unbounded);
+    font-family: 'Unbounded-Bold';
+    color: var(--white-color);
 }
 
 footer > .footer-inner {
@@ -126,7 +138,6 @@ footer > .footer-inner {
 .logo > h1 {
     text-transform: uppercase;
     font-size: 1.8rem;
-    color: #fff;
 }
 
 .footer-logo > .copy-right {
@@ -136,7 +147,6 @@ footer > .footer-inner {
 
 .copy-right > span {
     font-size: 12px;
-    color: var(--white-color);
 }
 
 .footer-inner > .footer-menu {
@@ -160,7 +170,6 @@ footer > .footer-inner {
 .menu-title > h2 {
     font-size: 1rem;
     text-transform: uppercase;
-    color: var(--white-color);
 }
 
 .main-menu > ul,
@@ -190,9 +199,9 @@ footer > .footer-inner {
     line-height: 3.125rem;
     font-size: 12px;
     font-weight: 100;
-    color: #000;
-    text-transform: uppercase;
     color: var(--white-color);
+    text-transform: uppercase;
+    font-family: 'Unbounded-Regular';
 }
 
 .footer-menu > .family-menu {
@@ -230,3 +239,20 @@ footer > .footer-inner {
     margin-right: 3rem;
 }
 
+.skeleton-loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, rgba(164, 164, 164, 0.1) 0%, rgba(119, 119, 119, 0.25) 100%);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    animation: load 1s infinite;
+}
+
+@keyframes load {
+    100% {
+        background-position: -100% 0;
+    }
+}
