--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,22 +119,20 @@ nav > .menu {
     font-weight: bold;
 }
 
-nav > .music-player {
+nav > .currentMusic-player {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 32rem;
-    height: 100%;
-}
-
-.music-player > .currentMusic-player {
-    width: 25rem;
+    width: 20rem;
     height: 100%;
     padding: 1rem 0;
 }
 
 .currentMusic-player > .music-cover {
-    display: inline-block;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     vertical-align: top;
     width: 3rem;
     height: 3rem;
@@ -143,9 +141,19 @@ nav > .music-player {
 }
 
 .music-cover > img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 0;
+    transition: .5s ease-in;
+}
+
+.music-cover > svg {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .currentMusic-player > .music-titleWrap {
@@ -159,7 +167,8 @@ nav > .music-player {
     height: 2rem;
     color: #fff;
     font-family: 'SEBANG_Bold';
-    font-size: 14px;
+    font-size: 12px;
+    word-break: keep-all;
 }
 
 .music-titleWrap > .music-artist {
@@ -169,57 +178,247 @@ nav > .music-player {
     font-size: 12px;
 }
 
-.currentMusic-player > .music-control {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    vertical-align: top;
-    width: 6rem;
-    height: 3rem;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.music-control > svg {
-    fill: #fff;
-}
-
-.currentMusic-player > .duration-timer {
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    vertical-align: top;
-    width: 6rem;
-    height: 100%;
-    color: var(--white-color);
-}
-
-.duration-timer > .duration-time {
-    font-family: 'SEBANG_Bold';
-    font-size: 14px;
-    color: var(--text-color);
-}
-
-.duration-timer > .total-time {
-    font-family: 'SEBANG_Bold';
-    font-size: 14px;
-}
-
-.music-player > .player-toggleButton {
+.currentMusic-player > .playList-toggle {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 5rem;
     height: 5rem;
-    cursor: pointer;
     border: none;
     background-color: transparent;
 }
 
-.player-toggleButton > svg {
-    width: 2.5rem;
-    height: 2.5rem;
+.playList-toggle > svg {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+}
+
+.playList-toggle > svg:hover {
+    animation: toggleButtonAnimate 1s linear infinite;
+}
+
+@keyframes toggleButtonAnimate {
+    0% {
+        transform: rotate(20deg);
+    }
+
+    50% {
+        transform: rotate(-20deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+#wrap > .playList-popup {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 5rem 20rem;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    z-index: 10;
+}
+
+#wrap > .playList-popup.active {
+    display: block;
+    animation : animate 2s linear ease-in-out;
+}
+
+@keyframes animate {
+    0% {
+        opacity : 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.playList-popup > .music-player {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30rem;
+    height: max-content;
+    font-family: 'SEBANG_Bold';
+}
+
+.music-player > .music-title {
+    width: 100%;
+    height: 6.25rem;
+    line-height: 6.25rem;
+    color: #fff;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.music-player > .music-artist {
+    width: 100%;
+    height: 3rem;
+    line-height: 3rem;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+}
+
+.music-player > .music-disk {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    margin: 3rem 0;
+    box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.4);
+    overflow: hidden;
+    animation: rotateDisk 8s linear infinite;
+    animation-play-state: paused;
+}
+
+.music-disk.play {
+    animation-play-state: running;
+}
+
+@keyframes rotateDisk {
+    0% {
+        transform: translateX(-50%) rotate(0);
+    }
+
+    50% {
+        transform: translateX(-50%) rotate(180deg);
+    }
+
+    100% {
+        transform: translateX(-50%) rotate(360deg);
+    }
+}
+
+.music-disk::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 5rem;
+    height: 5rem;
+    content: '';
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
+    border-radius: 50%;
+}
+
+.music-disk > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.music-player > .audio-slider {
+    position: relative;
+    width: 100%;
+    height: 5rem;
+}
+
+.audio-slider > .seek-bar {
+    -webkit-appearance: none;
+    display: block;
+    width: 100%;
+    height: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+.seek-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 1px;
+    height: 20px;
+    background-color: #000000;
+    box-shadow: -35rem 0 0 35rem rgba(255, 255, 255, 0.8);
+    cursor: pointer;
+}
+
+.audio-slider > .current-time {
+    height: 3rem;
+    line-height: 3rem;
+    font-family: 'SEBANG_Bold';
+    color: #fff;
+}
+
+.audio-slider > .music-duration {
+    position: absolute;
+    right: 0;
+    height: 3rem;
+    line-height: 3rem;
+    color: #fff;
+    font-family: 'SEBANG_Bold';
+}
+
+.music-player > .audio-control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 5rem;
+}
+
+.audio-control > .play-btn {
+    position: relative;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.play-btn > span {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 25%;
+    width: 10px;
+    height: 2rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    transition: .5s;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.play-btn > span:nth-child(2) {
+    left: 58%;
+    transform-origin: center;
+}
+
+.play-btn.pause span:nth-child(2) {
+    transform: translateY(-50%) scaleY(0);
+}
+
+.play-btn.pause span:nth-child(1) {
+    width: 35%;
+    left: 53%;
+    transform: translate(-50%, -50%);
+    clip-path: polygon(0 0, 100% 50%, 100% 50%, 0% 100%);
+    border-radius: 0;
+}
+
+.play-btn.pause {
+    animation: pause 2s linear infinite;
+}
+
+@keyframes pause {
+    0% {
+        box-shadow: 0;
+    }
+    50% {
+        box-shadow: 0 0 5px 5px rgba(255,255,255,0.1);
+    }
+    100% {
+        box-shadow: 0 0 5px 5px rgba(255,255,255,0.4);
+    }
 }
 
 /* 전역 footer 영역 */
